<resources>
    <string name="app_name">Media Markt</string>

    <string name="tab1">Inicio</string>
    <string name="tab2">Productos</string>
    <string name="tab3">Carrito</string>

    <string name="home_description">Media Markt, nº 1 en tiendas de informática y electrónica en España y Europa Las tiendas Media Markt somos líderes en informática, electrónica, electrodomésticos y otros complementos para el entretenimiento, siempre con las mejores marcas al mejor precio.</string>
    <string name="home_adress">Calle Luis Buñuel, Pulianas, Granada 958 89 97 00</string>
    <string name="home_contact">Si tienes cualquier duda sobre tu compra o consulta sobre nuestras tiendas, puedes contactar con nostros como prefieras: Llámanos a nuestro teléfono de atención al cliente: 902 10 25 73 Horario de lunes a viernes de 9:00 a 22:00 horas; sábados, domingos y festivos de apertura de 9:00 a 20:00 horas.</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_stock">Stock:</string>
    <string name="bt_pedido">Hacer Pedido</string>
    <string name="tv_total">Total:</string>
    <string name="tv_unidades">Unidades:</string>
    <string name="tv_precio">Precio:</string>

    <string name="msg_nostock">No hay suficiente stock de este producto</string>
    <string name="msg_addok">Producto añadido al carrito</string>
    <string name="msg_borrar">Seguro que deseas eliminarlo del carrito?</string>
    <string name="msg_pedido">Tu pedido ha sido enviado con exito</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="search_hint">Buscar...</string>
    <string name="action_search">Buscar</string>
    <string name="et_nombre">Nombre</string>
    <string name="et_apellido">Apellidos</string>
    <string name="et_direccion">Dirección</string>
    <string name="et_telefono">Teléfono</string>
</resources>
