<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_nombre"
        android:layout_marginTop="20dp"
        android:hint="@string/et_nombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_apellido"
        android:layout_marginTop="20dp"
        android:hint="@string/et_apellido" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_direccion"
        android:layout_marginTop="20dp"
        android:hint="@string/et_direccion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/et_telefono"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/et_telefono" />
</LinearLayout>